2008-03-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/async-getprop.c: Return silently instead an assert if node not found
                           on remove.

2008-03-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.h:
    * src/ccm-display.c: Fix async get_property handler destruction
    
    * src/ccm-window.c: Check hint_type and mwm property on map

2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c: Fix a crash on remove get_property handler.
    * src/ccm-display.c: 
    * src/ccm-screen.c:
    * src/ccm-screen.h: Create one window selection owner for each screen.

2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c: Cache use_xshm option.

2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Use async get property for hint type and is_decorated.
    
    * plugins/opacity/ccm-opacity.c
    * plugins/shadow/ccm-shadow.c: Fix get property handling.
    
    * src/async-getprop.c:
    * src/async-getprop.h: Add ag_task_destroy method.
    
2008-03-19  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/shadow/ccm-shadow.c:
    * src/ccm-display.c:
    * src/ccm-display.h:
    * src/ccm-pixmap-glitz.c:
    * src/ccm-pixmap.c:
    * src/ccm-window.c: Handle better Xerror event.

2008-03-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm.h: Expose find window functions, add activate window function
    * src/ccm-window.c:
    * src/ccm-window.h: Set default window type to normal
    * plugins/mosaic/ccm-mosaic.c: Include only normal window.
    
2008-03-17  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Add libgtop depends
    * plugins/perf/ccm-perf.c: Show cpu and memory load average.
    * src/ccm-image.c: Fix a shm memory leak.
    * src/ccm-region.c: